--- a/index.html
+++ b/index.html
@@ -1,15 +1,95 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" dir="ltr">
   <head>
+    <!-- Absoluetely Nesscary Meta Tags -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="src/assets/logo.svg" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bookracy</title>
+    <title>Bookracy | Why Pay for Books?</title>
+
+    <!-- Favicons and Other CSS -->
+    <link rel="icon" type="image/svg+xml" href="src/assets/logo.svg" sizes="32x32" alt="Bookracy logo" title="Bookracy logo" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet" />
+
+    <!-- Schema.org Markup -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "url": "https://www.bookracy.org/",
+        "name": "Bookracy",
+        "description": "Why Pay for Knowledge? Why Pay for Books? Why Pay for Education? Welcome to Bookracy, where our motto is that knowledge and education should be free! We have the largest database of over 2,000 books, articles, publications, and more from many sources, all compiled into one place. Go ahead and search for novels, books, magazines, and even news publications—we've got it all! Because education should be a right, not something to exploit. Furthermore, we are a public library and archive similar to archive.org. You can download books and read them or use our onsite reader without paying or 'borrowing' the item. We hold no license or distribution rights, and all publications are from their original owners under the Creative Commons License. However, by using our site, you grant us permission to use your content without the need for a license and without consent. We are not affiliated with any of the publishers, nor do we support piracy or the usage of pirated materials. We ask that you upload your content to us in good faith and only if you are able to do so. Our content will not be removed and will remain in our database indefinitely. Please upload and share your content as we hope to spread the knowledge of education to the masses without having to search and use multiple untrustworthy sites.",
+        "publisher": {
+          "@type": "Organization",
+          "name": "Bookracy",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.bookracy.org/src/assets/logo.svg"
+          }
+        },
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "https://www.bookracy.org/search/{search_term_string}",
+          "query-input": "required name=search_term_string"
+        },
+        "mainEntityOfPage": {
+          "@type": "WebPage",
+          "@id": "https://www.bookracy.org/"
+        },
+        "sameAs": [
+          "https://x.com/bookracy",
+          "https://discord.com/invite/bookracy",
+          "https://github.com/bookracy"
+        ],
+        "hasPart": [
+          {
+            "@type": "WebPage",
+            "url": "https://www.bookracy.org/featured",
+            "name": "Featured"
+          },
+          {
+            "@type": "WebPage",
+            "url": "https://www.bookracy.org/random",
+            "name": "Random"
+          },
+          {
+            "@type": "WebPage",
+            "url": "https://www.bookracy.org/settings",
+            "name": "Settings"
+          },
+          {
+            "@type": "WebPage",
+            "url": "https://www.bookracy.org/upload",
+            "name": "Upload"
+          },
+          {
+            "@type": "WebPage",
+            "url": "https://www.bookracy.org/contact",
+            "name": "Contact"
+          },
+          {
+            "@type": "WebPage",
+            "url": "https://www.bookracy.org/account",
+            "name": "Account"
+          },
+          {
+            "@type": "WebPage",
+            "url": "https://www.bookracy.org/about",
+            "name": "About"
+          },
+          {
+            "@type": "WebPage",
+            "url": "https://www.bookracy.org/discord",
+            "name": "Discord"
+          }
+        ]
+      }
+      </script>
   </head>
   <body>
     <div id="root"></div>
+    <noscript>Please activate JavaScript to view this site.</noscript>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
