--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       {
         "@context": "https://schema.org",
         "@type": "WebSite",
-        "url": "https://www.bookracy.org/",
+        "url": "https://bookracy.org/",
         "name": "Bookracy",
         "description": "Why Pay for Knowledge? Why Pay for Books? Why Pay for Education? Welcome to Bookracy, where our motto is that knowledge and education should be free! We have the largest database of over 2,000 books, articles, publications, and more from many sources, all compiled into one place. Go ahead and search for novels, books, magazines, and even news publications—we've got it all! Because education should be a right, not something to exploit. Furthermore, we are a public library and archive similar to archive.org. You can download books and read them or use our onsite reader without paying or 'borrowing' the item. We hold no license or distribution rights, and all publications are from their original owners under the Creative Commons License. However, by using our site, you grant us permission to use your content without the need for a license and without consent. We are not affiliated with any of the publishers, nor do we support piracy or the usage of pirated materials. We ask that you upload your content to us in good faith and only if you are able to do so. Our content will not be removed and will remain in our database indefinitely. Please upload and share your content as we hope to spread the knowledge of education to the masses without having to search and use multiple untrustworthy sites.",
         "publisher": {
@@ -25,58 +25,58 @@
           "name": "Bookracy",
           "logo": {
             "@type": "ImageObject",
-            "url": "https://www.bookracy.org/src/assets/logo.svg"
+            "url": "https://bookracy.org/src/assets/logo.svg"
           }
         },
         "potentialAction": {
           "@type": "SearchAction",
-          "target": "https://www.bookracy.org/search/{search_term_string}",
+          "target": "https://bookracy.org/search/{search_term_string}",
           "query-input": "required name=search_term_string"
         },
         "mainEntityOfPage": {
           "@type": "WebPage",
-          "@id": "https://www.bookracy.org/"
+          "@id": "https://bookracy.org/"
         },
         "sameAs": ["https://x.com/bookracy", "https://discord.com/invite/bookracy", "https://github.com/bookracy"],
         "hasPart": [
           {
             "@type": "WebPage",
-            "url": "https://www.bookracy.org/featured",
+            "url": "https://bookracy.org/featured",
             "name": "Featured"
           },
           {
             "@type": "WebPage",
-            "url": "https://www.bookracy.org/random",
+            "url": "https://bookracy.org/random",
             "name": "Random"
           },
           {
             "@type": "WebPage",
-            "url": "https://www.bookracy.org/settings",
+            "url": "https://bookracy.org/settings",
             "name": "Settings"
           },
           {
             "@type": "WebPage",
-            "url": "https://www.bookracy.org/upload",
+            "url": "https://bookracy.org/upload",
             "name": "Upload"
           },
           {
             "@type": "WebPage",
-            "url": "https://www.bookracy.org/contact",
+            "url": "https://bookracy.org/contact",
             "name": "Contact"
           },
           {
             "@type": "WebPage",
-            "url": "https://www.bookracy.org/account",
+            "url": "https://bookracy.org/account",
             "name": "Account"
           },
           {
             "@type": "WebPage",
-            "url": "https://www.bookracy.org/about",
+            "url": "https://bookracy.org/about",
             "name": "About"
           },
           {
             "@type": "WebPage",
-            "url": "https://www.bookracy.org/discord",
+            "url": "https://bookracy.org/discord",
             "name": "Discord"
           }
         ]
@@ -95,14 +95,14 @@
 
     <meta property="og:title" content="Bookracy - Why Pay for Knowledge?" />
     <meta property="og:description" content="Access over 2,000 free books, articles, and publications. Download or read online without paying. Bookracy: Where knowledge and education are free!" />
-    <meta property="og:image" content="https://www.bookracy.org/src/assets/logo.svg" />
+    <meta property="og:image" content="https://bookracy.org/src/assets/logo.svg" />
     <meta property="og:url" content="https://bookracy.com" />
     <meta property="og:type" content="website" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Bookracy - Free Knowledge and Education for All" />
     <meta name="twitter:description" content="Access over 2,000 free books, articles, and publications. Download or read online without paying. Bookracy: Where knowledge and education are free!" />
-    <meta name="twitter:image" content="https://www.bookracy.org/src/assets/logo.svg" />
+    <meta name="twitter:image" content="https://bookracy.org/src/assets/logo.svg" />
 
     <meta name="theme-color" content="#252525" />
 
