add library page

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
           },
           {
             "@type": "WebPage",
-            "url": "https://bookracy.org/random",
-            "name": "Random"
+            "url": "https://bookracy.org/library",
+            "name": "Library"
           },
           {
             "@type": "WebPage",
