styling fixes for mobile

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         "@type": "WebSite",
         "url": "https://bookracy.org/",
         "name": "Bookracy",
-        "description": "Why Pay for Knowledge? Why Pay for Books? Why Pay for Education? Welcome to Bookracy, where our motto is that knowledge and education should be free! We have the largest database of over 2,000 books, articles, publications, and more from many sources, all compiled into one place. Go ahead and search for novels, books, magazines, and even news publications—we've got it all! Because education should be a right, not something to exploit. Furthermore, we are a public library and archive similar to archive.org. You can download books and read them or use our onsite reader without paying or 'borrowing' the item. We hold no license or distribution rights, and all publications are from their original owners under the Creative Commons License. However, by using our site, you grant us permission to use your content without the need for a license and without consent. We are not affiliated with any of the publishers, nor do we support piracy or the usage of pirated materials. We ask that you upload your content to us in good faith and only if you are able to do so. Our content will not be removed and will remain in our database indefinitely. Please upload and share your content as we hope to spread the knowledge of education to the masses without having to search and use multiple untrustworthy sites.",
+        "description": "Why Pay for Knowledge? Why Pay for Books? Why Pay for Education? Welcome to Bookracy, where our motto is that knowledge and education should be free! We have the largest database of over 2,000,000 books, articles, publications, and more from many sources, all compiled into one place. Go ahead and search for novels, books, magazines, and even news publications—we've got it all! Because education should be a right, not something to exploit. Furthermore, we are a public library and archive similar to archive.org. You can download books and read them or use our onsite reader without paying or 'borrowing' the item. We hold no license or distribution rights, and all publications are from their original owners under the Creative Commons License. However, by using our site, you grant us permission to use your content without the need for a license and without consent. We are not affiliated with any of the publishers, nor do we support piracy or the usage of pirated materials. We ask that you upload your content to us in good faith and only if you are able to do so. Our content will not be removed and will remain in our database indefinitely. Please upload and share your content as we hope to spread the knowledge of education to the masses without having to search and use multiple untrustworthy sites.",
         "publisher": {
           "@type": "Organization",
           "name": "Bookracy",
@@ -84,7 +84,7 @@
     </script>
 
     <!-- General Meta Tags -->
-    <meta name="description" content="Bookracy: Free access to over 2,000 books, articles, and publications. Download or read online without paying. Knowledge and education should be free!" />
+    <meta name="description" content="Bookracy: Free access to over 2,000,000 books, articles, and publications. Download or read online without paying. Knowledge and education should be free!" />
     <meta
       name="keywords"
       content="Bookracy, free books, free education, online library, ebooks, digital library, free knowledge, public archive, free publications, free articles, free magazines, free novels, educational resources, open access, digital reading, online reading, free learning, academic resources, research materials, literature, textbooks, educational equality, knowledge sharing, free downloads"
@@ -94,14 +94,17 @@
     <meta name="language" content="English" />
 
     <meta property="og:title" content="Bookracy - Why Pay for Knowledge?" />
-    <meta property="og:description" content="Access over 2,000 free books, articles, and publications. Download or read online without paying. Bookracy: Where knowledge and education are free!" />
+    <meta property="og:description" content="Access over 2,000,000 free books, articles, and publications. Download or read online without paying. Bookracy: Where knowledge and education are free!" />
     <meta property="og:image" content="https://bookracy.org/src/assets/logo.svg" />
     <meta property="og:url" content="https://bookracy.com" />
     <meta property="og:type" content="website" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Bookracy - Free Knowledge and Education for All" />
-    <meta name="twitter:description" content="Access over 2,000 free books, articles, and publications. Download or read online without paying. Bookracy: Where knowledge and education are free!" />
+    <meta
+      name="twitter:description"
+      content="Access over 2,000,000 free books, articles, and publications. Download or read online without paying. Bookracy: Where knowledge and education are free!"
+    />
     <meta name="twitter:image" content="https://bookracy.org/src/assets/logo.svg" />
 
     <meta name="theme-color" content="#252525" />
@@ -126,7 +129,7 @@
     <meta property="og:site_name" content="Bookracy" />
     <meta
       property="og:description"
-      content="Bookracy offers free access to over 2,000 books, articles, and publications. Download or read online without paying. We believe knowledge and education should be free and accessible to everyone. Search for novels, books, magazines, and news publications—we've got it all!"
+      content="Bookracy offers free access to over 2,000,000 books, articles, and publications. Download or read online without paying. We believe knowledge and education should be free and accessible to everyone. Search for novels, books, magazines, and news publications—we've got it all!"
     />
     <meta property="og:email" content="contact@bookracy.org" />
 
